--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ html, body, #root {
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 13, 13, 0.87);
+  color: #3b82f6;
   background-color: #242424;
 
   font-synthesis: none;
